[gd_scene load_steps=16 format=3 uid="uid://d2uxgs5muwiq8"]

[ext_resource type="Script" path="res://Scripts/UI_1/Tab1UI.gd" id="1_uw35b"]
[ext_resource type="Script" path="res://Scripts/UI_1/Play_game_PB.gd" id="2_nmq3c"]
[ext_resource type="Theme" uid="uid://cmyvtqykhbior" path="res://main_theme.tres" id="3_3qtp6"]
[ext_resource type="Script" path="res://Scripts/UI_1/SoloQ_W_label.gd" id="6_87t2r"]
[ext_resource type="Script" path="res://Scripts/UI_1/SoloQ_W_amount.gd" id="7_mbsye"]
[ext_resource type="Script" path="res://Scripts/UI_1/SoloQ_L_amount.gd" id="8_4lyrx"]
[ext_resource type="Script" path="res://Scripts/UI_1/SoloQ_WR_amount.gd" id="9_m3jr4"]
[ext_resource type="Script" path="res://Scripts/UI_1/Player_exp_ProgBar.gd" id="10_chrru"]
[ext_resource type="Script" path="res://Scripts/UI_1/playerexplabel.gd" id="11_av5xe"]
[ext_resource type="Script" path="res://Scripts/UI_1/Learn_skill_ProgBar.gd" id="12_d7823"]
[ext_resource type="Script" path="res://Scripts/UI_1/Skills_container.gd" id="12_ne02h"]
[ext_resource type="Script" path="res://Scripts/UI_1/Resume_container.gd" id="14_pfwpo"]

[sub_resource type="Theme" id="Theme_ani4c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67brh"]
bg_color = Color(0, 0.802278, 0, 1)

[sub_resource type="Theme" id="Theme_unbsm"]
default_base_scale = 1.0
default_font_size = 40
ProgressBar/styles/fill = SubResource("StyleBoxFlat_67brh")

[node name="Tab1UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uw35b")

[node name="Play_game_ProgBar" type="ProgressBar" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 102.0
offset_right = 173.0
offset_bottom = 175.0
grow_horizontal = 2
theme = ExtResource("3_3qtp6")
script = ExtResource("2_nmq3c")

[node name="Play_game" type="Button" parent="Play_game_ProgBar"]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 6.0
offset_right = 173.0
offset_bottom = 83.0
grow_horizontal = 2
theme = ExtResource("3_3qtp6")
toggle_mode = true
text = "Play the game"

[node name="Timer" type="Timer" parent="Play_game_ProgBar"]
process_callback = 0
wait_time = 0.1

[node name="GridContainer" type="GridContainer" parent="Play_game_ProgBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.218
anchor_top = -1.151
anchor_right = -2.218
anchor_bottom = -1.151
offset_left = 20.3
offset_top = 0.0230026
offset_right = 307.3
offset_bottom = 233.023
theme = SubResource("Theme_ani4c")
columns = 2

[node name="SoloQ_W_label" type="Label" parent="Play_game_ProgBar/GridContainer"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
text = "W:"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_87t2r")

[node name="SoloQ_W_amount" type="Label" parent="Play_game_ProgBar/GridContainer"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_mbsye")

[node name="SoloQ_L_label" type="Label" parent="Play_game_ProgBar/GridContainer"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
text = "L:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoloQ_L_amount" type="Label" parent="Play_game_ProgBar/GridContainer"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_4lyrx")

[node name="SoloQ_WR_label" type="Label" parent="Play_game_ProgBar/GridContainer"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
text = "W/R:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoloQ_WR_amount" type="Label" parent="Play_game_ProgBar/GridContainer"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_m3jr4")

[node name="Player_exp_ProgBar" type="ProgressBar" parent="."]
layout_mode = 1
offset_left = 328.0
offset_top = 74.0
offset_right = 674.0
offset_bottom = 155.0
theme = ExtResource("3_3qtp6")
allow_greater = true
script = ExtResource("10_chrru")

[node name="Label" type="Label" parent="Player_exp_ProgBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.901
anchor_bottom = -0.901
offset_left = 3.0
offset_top = 150.981
offset_right = 343.0
offset_bottom = 222.981
text = "Level: 0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_av5xe")

[node name="Label2" type="Label" parent="Player_exp_ProgBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.815
anchor_bottom = -0.815
offset_top = -6.98499
offset_right = 348.0
offset_bottom = 65.015
text = "Experience"
horizontal_alignment = 1

[node name="Skills_label" type="Label" parent="."]
layout_mode = 2
anchor_top = 0.467
anchor_bottom = 0.467
offset_left = 34.0
offset_top = -0.360016
offset_right = 170.0
offset_bottom = 71.64
grow_vertical = 2
theme = ExtResource("3_3qtp6")
text = "Learn skills:"

[node name="Skills_container" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.533
anchor_bottom = 0.533
offset_left = 24.0
offset_top = 0.359924
offset_right = 690.0
offset_bottom = 268.36
grow_vertical = 2
script = ExtResource("12_ne02h")

[node name="Learn_skill" type="Button" parent="Skills_container"]
layout_mode = 2
theme = ExtResource("3_3qtp6")
toggle_mode = true
text = "Plug in your monitor"

[node name="Learn_skill_ProgBar" type="ProgressBar" parent="Skills_container"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("3_3qtp6")
script = ExtResource("12_d7823")

[node name="Timer" type="Timer" parent="Skills_container/Learn_skill_ProgBar"]
process_callback = 0
wait_time = 0.1

[node name="Resume_container" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.971
anchor_right = 0.971
offset_left = -500.32
offset_right = 0.67981
offset_bottom = 764.0
grow_horizontal = 0
theme = SubResource("Theme_unbsm")
script = ExtResource("14_pfwpo")

[node name="Resume_label" type="Label" parent="Resume_container"]
layout_mode = 2
text = "Skills:"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.793
anchor_bottom = 0.793
offset_left = 4.0
offset_top = -104.44
offset_right = 580.0
offset_bottom = -13.4401
grow_vertical = 0
theme = ExtResource("3_3qtp6")
text = "+ mechanics!!!!"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
layout_mode = 0
offset_left = 14.0
offset_right = 565.0
offset_bottom = 80.0
color = Color(0, 0, 0, 1)

[connection signal="progbar_full_l" from="Play_game_ProgBar" to="Play_game_ProgBar/GridContainer/SoloQ_L_amount" method="_on_play_game_prog_bar_progbar_full_l"]
[connection signal="progbar_full_l" from="Play_game_ProgBar" to="Play_game_ProgBar/GridContainer/SoloQ_WR_amount" method="_on_play_game_prog_bar_progbar_full_l"]
[connection signal="progbar_full_l" from="Play_game_ProgBar" to="Player_exp_ProgBar" method="_on_play_game_prog_bar_progbar_full_l"]
[connection signal="progbar_full_w" from="Play_game_ProgBar" to="Play_game_ProgBar/GridContainer/SoloQ_W_amount" method="_on_play_game_prog_bar_progbar_full_w"]
[connection signal="progbar_full_w" from="Play_game_ProgBar" to="Play_game_ProgBar/GridContainer/SoloQ_WR_amount" method="_on_play_game_prog_bar_progbar_full_w"]
[connection signal="progbar_full_w" from="Play_game_ProgBar" to="Player_exp_ProgBar" method="_on_play_game_prog_bar_progbar_full_w"]
[connection signal="toggled" from="Play_game_ProgBar/Play_game" to="Play_game_ProgBar" method="_on_play_game_toggled"]
[connection signal="timeout" from="Play_game_ProgBar/Timer" to="Play_game_ProgBar" method="_on_timer_timeout"]
[connection signal="changed" from="Player_exp_ProgBar" to="." method="_on_player_exp_prog_bar_changed"]
[connection signal="changed" from="Player_exp_ProgBar" to="Player_exp_ProgBar/Label" method="_on_player_exp_prog_bar_changed"]
[connection signal="level_signal" from="Player_exp_ProgBar/Label" to="." method="_on_label_level_signal"]
[connection signal="toggled" from="Skills_container/Learn_skill" to="Skills_container/Learn_skill_ProgBar" method="_on_learn_skill_toggled"]
[connection signal="skill_progbar_full" from="Skills_container/Learn_skill_ProgBar" to="." method="_on_learn_skill_prog_bar_skill_progbar_full"]
[connection signal="skill_progbar_full" from="Skills_container/Learn_skill_ProgBar" to="Skills_container" method="_on_learn_skill_prog_bar_skill_progbar_full"]
[connection signal="skill_progbar_full" from="Skills_container/Learn_skill_ProgBar" to="Resume_container" method="_on_learn_skill_prog_bar_skill_progbar_full"]
[connection signal="timeout" from="Skills_container/Learn_skill_ProgBar/Timer" to="Skills_container/Learn_skill_ProgBar" method="_on_timer_timeout"]
